--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
   margin: 0;
   padding: 0;
-  background: linear-gradient(0deg, rgba(255,222,0,1), rgba(255,222,0,1));
+  background: linear-gradient(90deg, rgba(253,29,29,1) 0%, rgba(251,198,35,1) 30%);
 }
