--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
+  height: 100vh;
   margin: 0;
   padding: 0;
-  background: linear-gradient(90deg, rgba(253,29,29,1) 0%, rgba(251,198,35,1) 30%);
+  background: linear-gradient( rgba(253,29,29,1) 0%, rgba(251,198,35,1) 30%);
 }
